fix: adjust letter-spacing for services title for improved readability

--- a/style.css
+++ b/style.css
@@ -1177,7 +1177,7 @@ footer {
   }
   .servicesTitle {
     font-size: 4rem;
-    letter-spacing: -7px;
+    letter-spacing: -5px;
   }
   .servicesTitle h1 {
     font-weight: 900;
